:construction: Got the initial version of the plugin working.

--- a/spec/fixtures/_layouts/default.html
+++ b/spec/fixtures/_layouts/default.html
@@ -3,5 +3,6 @@
 <!DOCTYPE html>
 <html>
 <body>
+<img src="{% thumbor https://example.com/picture.jpg, width: 500, height: 500 %}">
 </body>
 </html>
